# TMDBCLI

./: .envexample  README.md  Usage.md  cli.py  pyproject.toml
tmdb_cli/: cli.py  fetchGenres.py  formatter.py  gem_ai.py  mov_api.py  user_prefs.py
